@startuml Program
skinparam style strictuml
skinparam monochrome false


interface ASTNode #b1e8f0 {
    getLine(): int
    getColumn(): int
}

class Program

ASTNode <|.. Program

interface Definition {
    type: Type
    offset: int
    scope: int
    name: String
}

class FunctionDefinition {
    varDefinitions: List<VarDefinition>
    statements: List<Statement>
}

ASTNode <|-- Definition
Definition <|..VarDefinition
Definition <|.. FunctionDefinition

@enduml
